# mmode-tools

./: .gitignore  README.md  pyproject.toml
notebooks/: forward-model-example.ipynb  load-covariance-tensor-example.ipynb
src/mmode_tools/: __init__.py  __main__.py  beam.py  clean.py  constants.py  examples.py  flag.py  functions.py  interferometers.py  inversion.py  io.py  modelling.py  plots.py  utils.py  vistools.py
src/mmode_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mmode_tools/cli/: beam_coefficients.py  cli.py  fit_map.py  telescope_config.py
src/mmode_tools/config/: default_config.toml  setup_examples.py  setup_paths.py
src/mmode_tools/data/: N32_config.toml  antenna_locations_SE607HBA_SEPTON.txt  antenna_locations_mwaPHII_extnd.txt  antenna_locations_mwa_Feb_24.txt  haslam_covtensor_N32_150MHz_config.toml  point_source_covtensor_N32_150MHz_config.toml
